infinispan-k8-primary/helm/deployment copy.yaml
# infinispan.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: infinispan
  namespace: identity-local
spec:
  replicas: 3
  selector:
    matchLabels:
      app: infinispan
  template:
    metadata:
      labels:
        app: infinispan
    spec:
      containers:
      - name: infinispan
        image: infinispan-custom:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 11222
          protocol: TCP
          name: hotrod
        - containerPort: 7900
          protocol: TCP
          name: xsite
        - containerPort: 7800
          protocol: TCP
          name: jgroups
        - containerPort: 8080
          protocol: TCP
          name: management
---
apiVersion: v1
kind: Service
metadata:
  name: infinispan
  namespace: identity-local
spec:
  ports:
  - port: 11222
    targetPort: 11222
  selector:
    app: infinispan
---
apiVersion: v1
kind: Service
metadata:
  name: infinispan-headless
  namespace: identity-local
spec:
  clusterIP: None
  selector:
    app: infinispan
  ports:
    - port: 11222
      targetPort: 11222
      name: hotrod
    - port: 7800
      targetPort: 7800
      name: jgroups
    - port: 7900
      targetPort: 7900
      name: xsite
---
apiVersion: v1
kind: Service
metadata:
  name: infinispan-xsite
  namespace: identity-local
spec:
  type: LoadBalancer
  selector:
    app: infinispan
  ports:
    - port: 7900
      targetPort: 7900
      name: xsite
