infinispan-k8-primary/helm/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: infinispan
  namespace: primary
spec:
  replicas: 3
  serviceName: infinispan-headless-primary
  selector:
    matchLabels:
      app: infinispan
  template:
    metadata:
      labels:
        app: infinispan
    spec:
      containers:
      - name: infinispan
        image: infinispan-primary:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 11222
          protocol: TCP
          name: hotrod
        - containerPort: 7900
          protocol: TCP
          name: xsite
        - containerPort: 7800
          protocol: TCP
          name: jgroups
        - containerPort: 8080
          protocol: TCP
          name: management
---
apiVersion: v1
kind: Service
metadata:
  name: infinispan
  namespace: primary
spec:
  type: NodePort
  selector:
    app: infinispan
  ports:
    - port: 11222
      targetPort: 11222
      nodePort: 30222
---
apiVersion: v1
kind: Service
metadata:
  name: infinispan-headless-primary
  namespace: primary
spec:
  clusterIP: None
  selector:
    app: infinispan
  ports:
    - port: 11222
      targetPort: 11222
      name: hotrod
    - port: 7800
      targetPort: 7800
      name: jgroups
    - port: 7900
      targetPort: 7900
      name: xsite
---
apiVersion: v1
kind: Service
metadata:
  name: infinispan-xsite
  namespace: primary
spec:
  type: NodePort
  selector:
    app: infinispan
  ports:
    - port: 7800
      targetPort: 7800
      nodePort: 30900
