infinispan-k8-primary/helm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infinispan
  namespace: identity-local
spec:
  type: ClusterIP
  ports:
    - port: 11222
      targetPort: 11222
      name: hotrod
  selector:
    app: infinispan
