infinispan-k8-primary/helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infinispan-rest-ingress
  namespace: identity-local
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: infinispan.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infinispan
                port:
                  number: 8080
